fixed sidebar scrollbar position

--- a/client/assets/styles/scss/server/server-sidebar.scss
+++ b/client/assets/styles/scss/server/server-sidebar.scss
@@ -8,6 +8,7 @@
   .row {
     max-height: 600px; // this should be fixed with flexbox
     overflow-y: auto;
+    padding: 0 12px;
 
     + .row {
       border-top: 1px solid $gray-lighter;
